完成日志的页面业务，还有网关的部分业务

--- a/zz91-sms/src/main/webapp/WEB-INF/views/smslog/index.vm
+++ b/zz91-sms/src/main/webapp/WEB-INF/views/smslog/index.vm
@@ -1,4 +1,17 @@
-<script type="text/javascript" src="#springUrl('/app/index.js')" ></script>
+<script type="text/javascript" src="#springUrl('/app/smslog.js')" ></script>
 <script type="text/javascript" >
-	
+	Ext.onReady(function(){
+		var grid=new com.zz91.sms.smslog.Grid({
+			id:SMSLOG.SMSLOG_GRID,
+			layout:"fit",
+			region:"center"
+		});
+		
+		
+		var viewport = new Ext.Viewport({
+			layout:"border",
+			items:[grid]
+		});
+		
+	})
 </script>
